--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "aws s3 rm --recursive s3://hearthhub-ui/ && aws s3 sync dist/ s3://hearthhub-ui"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
