--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "docker build . -t cbartram/hearthhub-frontend:latest && docker push cbartram/hearthhub-frontend:latest && helm upgrade hearthhub-frontend ./manifests/hearthhub-frontend -f ./manifests/hearthhub-frontend/values.yaml"
+    "deploy": "./scripts/deploy.sh"
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.1.2",
